# Template-Embedded

./: .gitignore  CMakeLists.txt  Readme.MD
drivers/gpio/: CMakeLists.txt
drivers/gpio/inc/: gpio_if.h
drivers/gpio/src/: gpio.c
drivers/gpio/tests/: Readme.MD
environment/cmakeTools/: splint.cmake
environment/native/: system.cmake
source/: main.c
source/hello/inc/: hello.h
source/hello/src/: hello.c
